--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700adisplay=swap');
 
 html, body{
     margin: 0;
@@ -13,7 +13,7 @@ html, body{
 
 h1 {
     font-weight: 700;
-    font-size: 80px;
+    font-size: 50px;
 }
 
 h2, h3, h4, h5 {
@@ -28,8 +28,4 @@ li, a{
     list-style: none;
     text-decoration: none;
     color: inherit
-}
-
-a:hover{
-    text-decoration: underline;
 }
