--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,15 +12,20 @@ html, body{
 
 h1 {
     font-weight: 700;
-    font-size: 50px;
+    font-size: 45px;
+    margin: 2vh 0px;
 }
 
-h2, h3, h4, h5 {
+h3 {
     font-weight: 500;
+    font-size: 25px;
+    color: gray;
+    margin: 2vh 0px;
 }
 
 p {
     font-weight: 300;
+    font-size: 20px;
 }
 
 li, a{
